--- a/README
+++ b/README
@@ -9,28 +9,6 @@ Usage:
 
 Include the scripts in the following order:
 
-<script type="text/javascript" src="grid.js"></script>
-<script type="text/javascript" src="version.js"></script>
-<script type="text/javascript" src="detector.js"></script>
-<script type="text/javascript" src="formatinf.js"></script>
-<script type="text/javascript" src="errorlevel.js"></script>
-<script type="text/javascript" src="bitmat.js"></script>
-<script type="text/javascript" src="datablock.js"></script>
-<script type="text/javascript" src="bmparser.js"></script>
-<script type="text/javascript" src="datamask.js"></script>
-<script type="text/javascript" src="rsdecoder.js"></script>
-<script type="text/javascript" src="gf256poly.js"></script>
-<script type="text/javascript" src="gf256.js"></script>
-<script type="text/javascript" src="decoder.js"></script>
-<script type="text/javascript" src="qrcode.js"></script>
-<script type="text/javascript" src="findpat.js"></script>
-<script type="text/javascript" src="alignpat.js"></script>
-<script type="text/javascript" src="databr.js"></script>
+<script type="text/javascript" src="./lib/zqrcode.min.js"></script>
 
-Set qrcode.callback to function "func(data)", where data will get the decoded information.
-
-Decode image with: qrcode.decode(url or DataURL).
-Decode from canvas with "qr-canvas" ID: qrcode.decode()
-
-[new from 2014.01.09]
-For webcam qrcode decoding (included in the test.html) you will need a browser with getUserMedia (WebRTC) capability.
+Decode image with: qrcode.decode(url or DataURL, function callback() {}).
